# NetSatBench

./: .gitignore  .gitmodules  LICENSE  README.md  config.json  nsb.py  requirements.txt
control/: README.md  nsb-deploy.py  (+15 more)
generators/StarPerf_Simulator/: .gitignore  NetSatBenchExport.py  NetSatBenchGenerate.py  README.md  StarPerf.py  pyproject.toml  sat-config-common.json
generators/StarPerf_Simulator/.github/: pull_request_template.md
generators/StarPerf_Simulator/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
generators/StarPerf_Simulator/.github/workflows/: pr_agent.yml
generators/StarPerf_Simulator/NetSatBenchKit/: NetSatBenchExport.py  NetSatBenchGenerate.py  NetSatBenchVisualizer.py  process_one_shell.py  requirements.txt  sat-config-common.json
generators/StarPerf_Simulator/NetSatBenchKit/ext_connectivity_plugin/: mbb_antenna.py  pass_antenna.py  pass_loss.py  pass_rate.py  retain_antenna.py
generators/StarPerf_Simulator/config/XML_constellation/: OneWebSmall.xml  Polar.xml
generators/StarPerf_Simulator/config/ground_stations/: OneWeb.xml  OneWebSmall.xml
generators/StarPerf_Simulator/config/manual_constellation_generation_json_file/: Example.json
generators/StarPerf_Simulator/config/users/: OneWeb.xml
generators/StarPerf_Simulator/docs/: interface_convention.md  third-party_libraries_list.txt
generators/StarPerf_Simulator/kits/NetSatBench/: NetSatBenchExport.py  NetSatBenchGenerate.py
generators/StarPerf_Simulator/samples/attack/: attack_cases.py
generators/StarPerf_Simulator/visualization/: constellation_visualization.py
(+241 files in other folders)
