[project]
name = "starperf"
version = "2.0.0"
description = "A Network Performance Simulator for Emerging Mega-Constellations"
authors = [
    { name = "StarPerf Team", email = "zeqilai@tsinghua.edu.cn" }
]
readme = "README.md"
license = { text = "BSD-2-Clause" }
requires-python = ">=3.10"
dependencies = [
    "h3==4.0.0b2",
    "h5py==3.10.0",
    "numpy==1.24.4",
    "openpyxl==3.1.2",
    "importlib-metadata==6.8.0",
    "skyfield==1.46",
    "sgp4==2.22",
    "pandas==2.1.0",
    "poliastro==0.17.0",
    "astropy==5.3.3",
    "networkx==3.1",
    "requests==2.31.0",
    "jenkspy==0.4.0",
    "pyecharts==2.0.4",
    "global-land-mask==1.0.0",
    "ephem==4.2",
    "ruptures==1.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
